--- a/style/style.css
+++ b/style/style.css
@@ -68,6 +68,8 @@ table {
   width: 100%;
   padding: 10px 0 10px 20%;
   background-color: cornflowerblue;
+  border-top: 2px solid black;
+  border-top: 1px solid white;
   display: inline; }
   #palett td {
     border: 10px solid grey;
