--- a/style/style.scss
+++ b/style/style.scss
@@ -88,6 +88,8 @@ table {
   width:100%;
   padding: 10px 0 10px 20%;
   background-color: cornflowerblue;
+  border-top: 2px solid black;
+  border-top: 1px solid white;
   display: inline;
 
   td {
