--- a/style/style.scss
+++ b/style/style.scss
@@ -43,7 +43,7 @@ table {
   width: 50%;
   float: left;
   padding: 20px;
-  margin: 20px 0 140px 20px;
+  margin: 20px 0 140px 10%;
   background-color: white;
 
   td {
@@ -119,3 +119,4 @@ table {
   border-right-color: lightgrey;
   border-bottom-color: lightgray;
 }
+
